# ruya

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json
docs/: AV1 CPU Usage Optimization Plan.md  Architecture Mermaid Diagram.md  Ruya Masterplan.md  agent.md  folder_structure_plan.md  master_execution_plan.md  task_list.md  vr-player-research.md
docs/archive/: Ruya Architecture.md  architecture_chatgpt_evaluation.md  mosiqi_editor_performance_spec.md  mosiqi_mvp_build_e79f93b8.plan.md  (+2 more)
public/: 2064eb57-1285-4c82-b0ba-986138130738.jfif
scripts/: fix-imports.mjs  migrate.mjs  register-context-menu.ps1  unregister-context-menu.ps1
specs/: Discussion.md  design.md  mosiqi_architecture_diagram.md  mosiqi_master_plan.md  video_architecture_journey.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  commands_cli.rs  commands_library.rs  lib.rs  library_state.rs  mpv_commands.rs  mpv_core.rs  mpv_d3d11_backend.rs  mpv_libmpv_probe.rs  mpv_process.rs  video_stream.rs
src-tauri/src/commands/: cli.rs  cli_types.rs  library.rs  mod.rs
src-tauri/src/core/: error.rs  system.rs  types.rs
src-tauri/src/editor/: export.rs  mod.rs  proxy.rs  thumbnails.rs
src-tauri/src/lmss/: cancellation.rs  mod.rs  probe.rs  remuxer.rs  server.rs
src-tauri/src/mpv/: commands.rs  core.rs  d3d11_backend.rs  mod.rs  probe.rs  process.rs
src-tauri/src/router/: audio_metadata.rs  mod.rs  probe.rs  scorer.rs
src-tauri/src/system/: cpu.rs
test files/: test_hevc.mkv
(+114 files in other folders)
