[package]
name = "ruya"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
libloading = "0.8"
raw-window-handle = "0.6"
axum = "0.7"
futures-core = "0.3"
tokio = { version = "1", features = ["io-util", "net", "process", "sync"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# HTTP types and range request parsing — used by the video streaming protocol.
http = "1"
http-range = "0.1.5"
percent-encoding = "2.3"
image = { version = "0.25", features = ["webp", "jpeg", "png", "gif"] }
base64 = "0.22"

# D3D11 render backend (Windows-only, M2+)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
] }
